# scylla-rust-udf

./: Cargo.lock.msrv  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
examples/: Cargo.toml  add.rs  combine.rs  commas.rs  dbl.rs  fib.rs  keys.rs  len.rs  topn.rs  udt.rs  wordcount.rs
scylla-bindgen/: Cargo.toml
scylla-macros/src/: from_row.rs  from_user_type.rs  into_user_type.rs  parser.rs  value_list.rs
scylla-udf/: Cargo.toml
scylla-udf-macros/: Cargo.toml
scylla-udf-macros/src/: export_newtype.rs  export_udf.rs  export_udt.rs  lib.rs  path.rs
scylla-udf/src/: abi_exports.rs  from_wasmptr.rs  lib.rs  to_columntype.rs  to_wasmptr.rs  wasm_convertible.rs  wasmptr.rs
tests/: Cargo.toml  hygiene.rs
