[workspace]
members = [
    "examples",
    "scylla-udf",
    "scylla-udf-macros",
    "tests",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
repository = "https://github.com/scylladb/scylla-rust-udf"
license = "MIT OR Apache-2.0"
rust-version = "1.66.1"

[workspace.dependencies]
scylla-udf = { path = "scylla-udf" }
scylla-udf-macros = { path = "scylla-udf-macros" }
