[package]
name = "scylla-udf-macros"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Implementation of scylla-udf macros"
readme = "../README.md"
keywords = ["scylla", "udf", "macro"]
categories = ["database", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
