[package]
name = "tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
scylla-udf = { version = "0.1.0", path = "../scylla-udf" }
bigdecimal = "0.2.0"
bytes = "1.2.1"
chrono = "0.4"
libc = "0.2.119"
num-bigint = "0.3"
uuid = "1.0"

[[test]]
name = "hygiene"
path = "hygiene.rs"
crate-type = ["cdylib"]
